[package]
name = "ascii"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.1"
bevy-parallax = "0.5.0"
bevy_embedded_assets = "0.7.0"
bevy_prototype_lyon = "0.8.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Wasm build optimised for smallest size as it is downloaded on the web
[profile.release-web]
inherits = "release"
opt-level = 's'
lto = "thin"
